--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "test": "jest",
     "seed:courses": "ts-node src/scripts/seedCourses.ts",
-    "create:user": "ts-node src/scripts/createTestUser.ts"
+    "create:user": "ts-node src/scripts/createTestUser.ts",
+    "test:auth": "ts-node src/scripts/testPassportAuth.ts"
   },
   "keywords": [
     "e-learning",
@@ -19,15 +20,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/express-session": "^1.18.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
